--- a/client/src/style/Categories.css
+++ b/client/src/style/Categories.css
@@ -1,5 +1,6 @@
 .cat-section {
-    border-bottom: 2px solid grey;
+    border-bottom: 2px solid black;
+    border-top: 2px solid black;
     width: 100vw;
     height: 75vh;
 }
@@ -14,8 +15,15 @@
 }
 
 .cat-content {
-    margin: 20px;
+    height: 30vh;
     width: 26vw;
+    background-image: url('https://brightcove04pmdo-a.akamaihd.net/5104226627001/5104226627001_5232386545001_5215063851001-vs.jpg?pubId=5104226627001&videoId=5215063851001');
+    background-size: cover;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 25px;
     border: 3px solid black;
 }
-
