--- a/client/src/components/RomanTimeline.css
+++ b/client/src/components/RomanTimeline.css
@@ -5,6 +5,8 @@
 html, body {
   color: black;
 	background: #fff;
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/6/64/Cole_Thomas_The_Course_of_Empire_Destruction_1836.jpg");
+  background-size: cover;
 	min-width: 700px;
 }
 
@@ -106,6 +108,6 @@ li:hover .description {
   padding: 20px 30px;
     background-color: white;
     position: relative;
-    border: 1px solid black;  
+    border: 1px solid black;
     border-radius: 6px;
   }
