--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Encode+Sans+Condensed|Poiret+One|Open+Sans);
+
 body {
   margin: 0;
   padding: 0;
@@ -8,6 +10,8 @@ body {
   display: none;
 }
 
-h2 {
-    text-decoration: none;
+h2, p, h1, a {
+  font-family: 'Encode Sans Condensed', sans-serif;
+  /* font-weight: bold; */
+  text-decoration: none;
 }
