--- a/client/src/style/Nav.css
+++ b/client/src/style/Nav.css
@@ -1,5 +1,6 @@
 .navbar {
-  border-bottom: 1px solid black;
+  border-bottom: 3px solid rgba(0,0,0,0.75);
+  background-color: SEASHELL;
   text-align: right;
   height: 6vh;
 
