--- a/client/src/components/RomanTimeline.css
+++ b/client/src/components/RomanTimeline.css
@@ -3,7 +3,7 @@
   overflow-y: hidden;
   white-space: nowrap;
   width: 100vw;
-  height: 50vh;
+  /* padding-top: 8vh; */
   display: flex;
   jusiify-content: space-around;
 }
@@ -18,11 +18,11 @@
 }
 
 .hline {
-  width:100%;
+  width:105vw;
   height:5px;
   background: #fff;
   position: fixed;
-  top: 23vh;
+  top: 220px;
   z-index: 0;
 }
 
@@ -38,7 +38,7 @@ body {
 /* ---- Timeline elements ---- */
 .event {
   font: bold 14px arial;
-  padding: 30px;
+  /* padding: 30px; */
   margin: 50px;
   display: flex;
   flex-direction: column;
@@ -46,11 +46,11 @@ body {
   z-index: 1;
 }
 
-.event:nth-child(even) {
+/* .event:nth-child(even) {
   flex-direction:column-reverse;
   position: relative;
-  bottom: 120px;
-}
+  bottom: 18vh;
+} */
 
 .date {
   width: 100px;
@@ -80,4 +80,12 @@ body {
   border-radius: 6px;
   white-space: normal;
   width: 400px;
+}
+
+.point {
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  background-color: #fff;
+  margin: 10px;
 }
