--- a/client/src/style/Header.css
+++ b/client/src/style/Header.css
@@ -1,11 +1,10 @@
-.header {
-  height: 40vh;
-  width: 100vw;
+.jumbotron {
   background-image: url('https://i.imgur.com/lMfAk8n.jpg');
+  height: 40vh;
   background-size: cover;
   margin: 0;
+  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
