--- a/client/src/components/RomanTimeline.css
+++ b/client/src/components/RomanTimeline.css
@@ -20,9 +20,9 @@ body {
 .hline {
   width:105vw;
   height:5px;
-  background: #fff;
+  background: rgba(255, 255, 255, 0.2);
   position: fixed;
-  top: 245px;
+  top: 244px;
   z-index: 0;
 }
 
@@ -83,9 +83,9 @@ body {
 }
 
 .point {
-  height: 10px;
-  width: 10px;
-  border-radius: 50%;
-  background-color: #fff;
+  height: 5px;
+  width: 15px;
+  /* border-radius: 50%; */
+  background-color: rgba(255,255,255, 0.9);
   margin: 10px;
 }
