--- a/client/src/components/RomanTimeline.css
+++ b/client/src/components/RomanTimeline.css
@@ -9,7 +9,7 @@
 
 .timeline-bg {
   width: 100%;
-  height: 50vh;
+  height: 100%;
   position: absolute;
   z-index: -1;
   background-size: cover;
