Add styling to favourites section

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Encode+Sans+Condensed|Poiret+One|Open+Sans);
 
 body {
-  background-color: black;
+  background-color: white;
   margin: 0;
   padding: 0;
   height: 100vh;
