--- a/client/src/components/RomanTimeline.css
+++ b/client/src/components/RomanTimeline.css
@@ -27,6 +27,10 @@ body {
   width: 100vw;
 }
 
+.timeline-content h2 {
+  text-align: center;
+}
+
 .hline {
   width:105vw;
   height:5px;
@@ -98,10 +102,4 @@ body {
   background-color: #FFF;
   height: 5px;
   transition: 0.2s;
-}
-
-.favourites {
-  height: 30vh;
-  background-color: #fff;
-  overflow-x: scroll;
 }
