replace home bg image, add menu icon

--- a/client/src/style/Home.css
+++ b/client/src/style/Home.css
@@ -1,2 +1,7 @@
 .home-content {
+  background-image: url('/landing_page_face_map_text.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-color: black;
+  height: 100vh;
 }
