--- a/client/src/style/Nav.css
+++ b/client/src/style/Nav.css
@@ -8,11 +8,34 @@
   height: 60px;
   background-color: transparent;
   position: fixed;
-  width: 100vw
+  width: 100vw;
+  z-index: 100;
 }
 
 #nav img {
   height: 60px;
   float: right;
   margin: 30px;
+}
+
+.menulink {
+  color: white;
+  background-color: black;
+  border-radius: 10px;
+  padding: 10px;
+  transition: 0.2s;
+  font-size: 4rem;
+}
+
+.menulink:hover {
+  color: black;
+  background-color: #fff;
+  text-decoration: none;
+  transition: 0.2s;
+}
+
+.collapse-content {
+  text-align: center;
+  margin-top: 40vh;
+  z-index: 2;
 }
