--- a/client/src/components/FavouriteButton.css
+++ b/client/src/components/FavouriteButton.css
@@ -2,12 +2,13 @@
   background-color: transparent;
   border: 1px solid black;
   border-radius: 10px;
-  padding: 5px;
+  padding: 10px;
   transition: 0.2s;
+  margin: 10px;
 }
 
 .save-button button:hover img {
-  transform: scale(1.1);
+  transform: scale(1.6);
   transition: 0.2s;
 }
 
