--- a/client/src/components/RomanTimeline.css
+++ b/client/src/components/RomanTimeline.css
@@ -1,4 +1,5 @@
 .timeline {
+  padding-top: 40px;
   overflow-x: auto;
   overflow-y: hidden;
   white-space: nowrap;
@@ -9,7 +10,7 @@
 
 .timeline-bg {
   width: 100%;
-  height: 100%;
+  height: 60vh;
   position: absolute;
   z-index: -1;
   background-size: cover;
@@ -23,7 +24,6 @@ body {
 }
 
 .timeline-content {
-  /* height: 85vh; */
   width: 100vw;
 }
 
@@ -36,7 +36,7 @@ body {
   height:5px;
   background: rgba(255, 255, 255, 0.2);
   position: absolute;
-  top: 266px;
+  top: 235px;
   z-index: 0;
 }
 
@@ -48,13 +48,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: 1;
+
 }
 
 .event:nth-child(even) {
   flex-direction:column-reverse;
   position: relative;
-  bottom: 50px;
+  bottom: 97px;
 }
 
 .event .save-button:active {
@@ -116,4 +116,20 @@ body {
   background-color: #FFF;
   height: 5px;
   transition: 0.2s;
+}
+
+.buttons {
+  width: 100vw;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.timebutton {
+  width: 33.33vw;
+  height: 50px;
+}
+
+.historical_outline {
+  max-height: 250px;
+  overflow-x: scroll;
 }
