--- a/client/src/components/Favourites.css
+++ b/client/src/components/Favourites.css
@@ -1,17 +1,16 @@
 .favourites {
   background-image: url('/timeline_background003.jpg');
-  overflow-x: scroll;
+  overflow-y: scroll;
   height: 50vh;
+  width: 100vw;
   display: flex;
-  flex-wrap: wrap;
 }
 
 .saved {
   border: 1px solid black;
   background-color: #fff;
-
   border-radius: 10px;
-  width: 20vw;
+  min-width: 400px;
   margin: 2vw;
   padding: 10px;
   transition: 0.3s;
