--- a/client/src/components/RomanTimeline.css
+++ b/client/src/components/RomanTimeline.css
@@ -10,7 +10,7 @@
 
 .timeline-bg {
   width: 100%;
-  height: 100%;
+  height: 120%;
   position: absolute;
   z-index: -1;
   background-size: cover;
@@ -25,7 +25,6 @@ body {
 
 .timeline-content {
   width: 100vw;
-  height: 1000px;
 }
 
 .timeline-content h2 {
@@ -126,12 +125,11 @@ body {
   margin-right: -10px;
   display: flex;
   flex-wrap: wrap;
-  z-index: 100;
+  z-index: 1;
 }
 
 .timebutton {
   width: 19vw;
-  /* height: 50px; */
 }
 
 .historical_outline {
@@ -145,6 +143,9 @@ body {
   justify-content: center;
 }
 
+.map-of-rome {
+  width: 40vw;
+}
+
 .topsection {
-  height: 100vh
 }
