--- a/client/src/components/RomanTimeline.css
+++ b/client/src/components/RomanTimeline.css
@@ -13,10 +13,7 @@
   height: 120%;
   position: absolute;
   z-index: -1;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center bottom;
-  transition: 1s;
+
 }
 
 body {
@@ -25,6 +22,10 @@ body {
 
 .timeline-content {
   width: 100vw;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: 1s;
 }
 
 .timeline-content h2 {
