style favourites section

--- a/client/src/components/Favourites.css
+++ b/client/src/components/Favourites.css
@@ -4,6 +4,7 @@
   height: 50vh;
   width: 100vw;
   display: flex;
+  font-size: 1.5rem;
 }
 
 .saved {
@@ -12,7 +13,7 @@
   border-radius: 10px;
   min-width: 400px;
   margin: 2vw;
-  padding: 10px;
+  padding: 40px;
   transition: 0.3s;
   text-align: center;
 }
@@ -20,4 +21,10 @@
 .saved:hover {
   background-color: white;
   transition: 0.3s;
+}
+
+.saved h4 {
+  margin-top: 40px;
+  padding-top: 30px;
+  border-top: 1px solid black;
 }
