--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  font-family: sans-serif;
+  font-family: 'Amiko', sans-serif;
 }
 
 ::-webkit-scrollbar {
